# settings-manager

./: .gitignore  .gitlab-ci.yml  AbstractSettingsContainer.hpp  CMakeLists.txt  LICENSE  ParameterManager.cxx  ParameterManager.hpp  README.md  SettingsEntry.cxx  SettingsEntry.hpp  SettingsEntryArray.hpp  SettingsIO.cxx  SettingsIO.hpp  SettingsUser.cxx  SettingsUser.hpp  include.mk
include/parameter_manager/: ParameterManager.hpp  SettingsContainer.hpp  SettingsEntry.hpp
include/settings-manager/: ParameterManager.hpp  SettingsContainer.hpp  SettingsEntry.hpp  SettingsIO.hpp
tests/: CMakeLists.txt
tests/fake/core/: hash.hpp
tests/fake/i2c-drivers/: 24lcxx.hpp
tests/include/: SpecialAssert.hpp  TestSettings.hpp
tests/include/fake/: FakeEeprom.hpp
tests/include/fake/i2c-drivers/: FakeEeprom.hpp
tests/src/: FakeEepromTest.cxx  FakeMemoryTest.cxx  ParameterManagerTest.cxx  SettingsContainerTest.cxx  SettingsContainerTest.hpp  SettingsEntryArrayTest.cxx  SettingsEntryTest.cxx  SettingsIOTest.cxx  SettingsUserTest.cxx
